# bear

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/bear/backends/: __init__.py  base.py  local.py  remote.py
src/bear/channels/: __init__.py  base.py
src/bear/config/: __init__.py  settings.py
src/bear/core/: interfaces.py
src/bear/domain/: __init__.py  enums.py  models.py
src/bear/policy/: __init__.py  permissions.py
src/bear/providers/: _http.py  factory.py
src/bear/providers/coding_agents/: __init__.py  base.py
src/bear/providers/llm/: __init__.py  base.py
src/bear/runtime/: __init__.py  demo.py  service.py
src/bear/storage/: __init__.py  markdown.py
src/bear/tools/: __init__.py  registry.py
src/bear/web/: __init__.py  app.py  main.py
tests/: test_api.py  test_channels_and_backends.py  test_policy_and_registry.py  test_providers.py  test_service.py  test_storage.py
